Layout bugfix- don't scroll x on main

--- a/app/styles/ember-skeleton/layout/_sidebar-layout.scss
+++ b/app/styles/ember-skeleton/layout/_sidebar-layout.scss
@@ -69,9 +69,9 @@
     }
     .main {
       height: 100%;
+      width: 100%;
       position: relative;
       box-shadow: inset 10px 0px 6px -6px rgba(0,0,0,0.2);
-      overflow-x: auto;
       overflow-y: auto;
       -webkit-overflow-scrolling: touch;
       flex-grow: 1;
@@ -85,6 +85,7 @@
       .content-body {
         display: inline-flex;
         flex-direction: column;
+        max-width: 100%;
       }
     }
 
